实验数据和结果/GenProg4Java/Math/95b/logseed6.txt
0 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
23 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
#Fri Mar 12 18:26:36 CST 2021
negativeTestWeight=2.0
classSourceFolder=/home/ubuntu/rtx/d4j/Math/95b/target/classes
model=default
sampleStrategy=variant
srcClassPath=/home/ubuntu/rtx/d4j/Math/95b/target/classes
sourceVersion=1.8
popsize=40
regenPaths=false
posCoverageFile=coverage.path.pos
continue=false
edits=APPEND;DELETE;REPLACE
negCoverageFile=coverage.path.neg
workingDir=/home/ubuntu/rtx/d4j/Math/95b/
clearTestCache=false
skipFailedSanity=false
sample=0.1 
oracleGenome=
testGranularity=class
justTestingFaultLoc=false
faultLocStrategy=standardPathFile
crossp=0.5
pMutation=1
generations=10
positiveTests=/home/ubuntu/rtx/d4j/Math/95b/pos.tests
javaVM=/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
seed=6
negativePathWeight=0.35
compileCommand=
fixStrategy=classScope
allowCoverageFail=false
targetClassName=/home/ubuntu/rtx/d4j/Math/95b/bugfiles.txt
javaRuntime=java.lang.Runtime@179d3b25
classTestFolder=
modelPath=OVERALLModel.txt
sanity=yes
positivePathWeight=0.65
jacocoPath=/home/ubuntu/rtx/genprog4java/lib/jacocoagent.jar
negativeTests=/home/ubuntu/rtx/d4j/Math/95b/neg.tests
pathToFileHumanInjectedFaultLoc=fileHumanInjectedFaultLoc.txt
outputDir=/home/ubuntu/rtx/d4j/Math/95b/genprog4java/variantSeed6/
testClassPath=/home/ubuntu/rtx/d4j/Math/95b/target/test-classes\:/home/ubuntu/rtx/d4j/Math/95b/target/classes\:/home/ubuntu/rtx/defects4j/framework/projects/lib/junit-4.11.jar
faultStrategy=classScope
sourceDir=src/java
checkSpace=false
search=gp
globalExtension=.java
faultSpaceSubSet=1/5
maxVariants=50
libs=/home/ubuntu/rtx/genprog4java/lib/junittestrunner.jar\:/home/ubuntu/rtx/genprog4java/lib/commons-cli-20040117.000000.jar\:/home/ubuntu/rtx/genprog4java/lib/junit-4.12.jar\:/home/ubuntu/rtx/genprog4java/lib/hamcrest-core-1.3.jar\:/home/ubuntu/rtx/genprog4java/lib/log4j-1.2.17.jar\:/home/ubuntu/rtx/d4j/Math/95b/target/test-classes\:/home/ubuntu/rtx/d4j/Math/95b/target/classes\:/home/ubuntu/rtx/defects4j/framework/projects/lib/junit-4.11.jar\:/home/ubuntu/rtx/d4j/Math/95b/target/classes
crossover=onepoint
113 [main] INFO clegoues.genprog4java.main.Main  - Configuration file loaded
Deserialized fitnessCache HashMap
5758 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - loaded from source clegoues.genprog4java.java.ClassInfo@73072019
5758 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking begins
6372 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 1 out of 2
6578 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

6578 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 2 out of 2
6798 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

6799 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - 	n1: 
7020 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - false (0)

7020 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking completed (time taken = 1262)
7021 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Start Fault Localization
7053 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Finish Fault Localization
7054 [main] INFO clegoues.genprog4java.Search.Search  - search: genetic algorithm begins

7084 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 original (stored at: )
7153 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(34,35) (stored at: )
7160 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(3) (stored at: )
7164 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(40,41) (stored at: )
7464 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(21,16) (stored at: variant0)
7470 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(33) (stored at: )
7478 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(33) (stored at: )
7555 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/math/distribution/FDistributionImpl.java:108: error: unreachable statement
        if (p == 1) {
        ^
1 error

7561 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(15,40) at variant1 fails to compile

7561 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(15,40) (stored at: variant1)
7564 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(12,8) (stored at: )
7566 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(17) (stored at: )
7579 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(12,20) (stored at: )
7583 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(12,40) (stored at: )
7591 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(2,3) (stored at: )
7592 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(18) (stored at: )
7656 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/math/distribution/FDistributionImpl.java:152: error: unreachable statement
        return ret;
        ^
1 error

7660 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(29,40) at variant2 fails to compile

7660 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(29,40) (stored at: variant2)
7958 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(18,18) (stored at: variant3)
7960 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(7,8) (stored at: )
7963 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(6,40) (stored at: )
8836 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 6.0 StmtAppend(29,8) (stored at: variant4)
8836 [main] INFO clegoues.genprog4java.Search.Search  - 
Repair Found: StmtAppend(29,8) (in variant4)

8930 [main] INFO clegoues.genprog4java.fitness.Fitness  - Serialized test cache to file testcache.ser
8933 [main] INFO clegoues.genprog4java.main.Main  - 
Total elapsed time: 8

